deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: craft
  labels:
    app.kubernetes.io/part-of: paytm-craft
