deploy/k8s/craft-realtime-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: craft-realtime
  namespace: craft
  labels:
    app: craft-realtime
    app.kubernetes.io/part-of: paytm-craft
spec:
  type: ClusterIP
  selector:
    app: craft-realtime
  ports:
    - name: http
      port: 4001
      targetPort: http
